fix: Fixed QuestBanner overflow

--- a/src/components/QuestsBanner/QuestsBanner.module.scss
+++ b/src/components/QuestsBanner/QuestsBanner.module.scss
@@ -65,6 +65,7 @@ $bannerCarouselWidth: 747px;
   min-width: 0;
   max-width: 100%;
   gap: 40px;
+  overflow: hidden;
 
   @include variables.for-desktop-up {
     align-items: flex-start;
